<resources>
    <string name="app_name">PC-BUDGET</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toolbar_title_home">PC-BUDGET</string>
    <string name="toolbar_title_products">Productos</string>
    <string name="toolbar_title_budget">Presupuesto</string>
    <string name="toolbar_title_more">Más</string>


    <string name="Components_text">Tus Componentes:</string>
    <string name="title_processor">Tu Procesador:</string>
    <string name="add_processor">Añadir procesador</string>
    <string name="title_graphic_card">Tu tarjeta grafica:</string>
    <string name="agregar_procesador_icono">agregar procesador icono</string>
    <string name="añadir_procesador"><u>Añadir Procesador</u></string>
    <string name="tu_memoria_ram">Tu memoria RAM:</string>
    <string name="añadir_TG"><u>Añadir tarjeta grafica</u></string>
    <string name="añadir_ram"><u>Añadir memoria ram</u></string>
    <string name="añadir_TM"><u>Añadir tarjeta madre</u></string>
    <string name="title_MB">Tu tarjeta madre:</string>
    <string name="tu_almacenamiento">Tu almacenamiento:</string>
    <string name="añadir_almacenamiento"><u>Añadir almacenamiento</u></string>
    <string name="tu_fuente_de_poder">Tu fuente de poder:</string>
    <string name="añadir_fuente_de_poder"><u>Añadir fuente de poder</u></string>
    <string name="tu_gabinete">Tu gabinete:</string>
    <string name="añadir_case"><u>Añadir gabinete</u></string>
    <string name="total_btn_text">Total</string>
    <string name="Guardar_boton">Guardar</string>
    <string name="built_computer">Computadoras Completas</string>
    <string name="built_your_own_pc">"O arma tu propia computadora "</string>
    <string name="processor">Procesadores</string>
    <string name="video_card">Tarjetas de Video</string>
    <string name="memories">Memorias</string>
    <string name="motherboards">Tarjetas Madre</string>
    <string name="storage">Almacenamiento</string>
    <string name="cases">Gabinetes</string>
    <string name="power_supply">Fuentes de Poder</string>
    <string name="create_account_text">Create account</string>
    <string name="inicio">Inicio</string>
    <string name="Productos">Productos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="mas">Más</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="Objetivo_completo">Facilitar la busqueda de productos, generando presupuestos a través del mercado real, para satisfacer las necesidades del cliente, conectando con centros de compra externos</string>
    <string name="no_tienes_ning_n_presupuesto_guardado">No tienes ningún presupuesto guardado</string>
    <string name="price_cpu_text">Precio: 299.95</string>
    <string name="name_text_cpu">Intel Xeon E3-1230 Processors BX80677E31230V6</string>
    <string name="name_grafica">GIGABYTE N105TD5 DDR5 4GB GTX 1050</string>
    <string name="price_grafica">Precio: $371.95</string>
    <string name="text_ram">CORSAIR VENGEANCE RGB - (16GB, 2x8GB) DDR4 2666 MHz</string>
    <string name="price_ram">Precio: $89.99</string>
    <string name="name_tm">Gigabyte B450M DS3H (AMD Ryzen AM4/M.2/HMDI/DVI/USB 3.1/DDR4/Micro ATX/Placa madre)</string>
    <string name="titulo_cuenta">Cuenta</string>
    <string name="cambiar_contra_tv">Cambiar contraseña</string>
    <string name="titulo_nosotros">Nosotros</string>
    <string name="objetivo">Objetivo</string>
    <string name="acerca_de">Acerca de</string>
    <string name="quienes_somos">¿Quienes somos?</string>
    <string name="redes_sociales_y_contacto">Redes Sociales y Contacto</string>
    <string name="telefono_2220_3456">Telefono: 2220–3456</string>
    <string name="twitter_pc_budget_bg2m">Twitter: PC-BUDGET(BG2M)</string>
    <string name="pc_budget_bg2m">PC-BUDGET(BG2M)</string>
    <string name="email_bg2m_group_gmail_com">Email: BG2M-GROUP@gmail.com</string>
    <string name="cambiar_btnText">Cambiar</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="indicacion_contraseña">¡Por favor, ingresa tu contraseña actual y despues tu nueva contraseña y confirmala, luego presiona el boton cambiar y listo!</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_nueva_contrasena">Confirmar nueva contraseña</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrate">¡Registrate!</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="confirme_su_correo_electronico">Confirme su correo electronico</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="componentes_juntos">Esta sera una descripcion del usuario. Esta sera una descripcion del usuario. Esta sera una descripcion del usuario.
    Esta sera una descripcion del usuario. </string>
    <string name="precio">761.89$</string>
    <string name="titleBudget">titulo</string>
    <string name="titletxt_product_processor">Intel Xeon E3-1230 Desktop Processor 8 Cores up to 5.0 GHz Turbo unlocked LGA1151 300</string>
    <string name="price_proccesor_product">Precio: $533.95</string>
    <string name="name_tar_madre">ASUS LGA2011 5 Way Optimization Safeslot X99 EATX</string>
    <string name="precio_tar_madre">Precio: $306.99</string>
    <string name="name_tar_video">ASUS CERBERUS- GTX – 1050TI – O4G</string>
    <string name="name_tarj_video">Gigabyte GV-RX580 – GAMING-8GD</string>
    <string name="precio_tar_video">Precio: $279.00</string>
    <string name="discoduro">PNY XLR8 CS3030 2TB M.2 Nvme Internal Solid State Drive (SSD) – M280CS3030–2TB-RB</string>
    <string name="precio_discoduro">Precio: $299.99</string>
    <string name="memory">Corsair CMW32GX4M2C3200C16 VENGEANCE RGB PRO 32GB (2x16GB) DDR4 3200 (PC4–25600) C16 Desktop memory Black</string>
    <string name="precio_memeria">Precio: $154.99</string>
    <string name="case_name">NZXT H510i - CA-H510i-B1 - Compact PC Gaming Case - Front I/O USB Type-C Port - Vertical GPU Mount - Tempered Glass Side Panel - RGB Lighting - Black</string>
    <string name="precio_gabinete">Precio: $99.99</string>
    <string name="Fuente_name">EVGA 100–W1–0500-KR 500 W1, 80+ White 500W, 3 Year Warranty, Power Supply, Black</string>
    <string name="precio_fuente">Precio: $69.94</string>
    <string name="computadora"><![CDATA[Intel Core i7–10750H 2.6GHz, NVIDIA GeForce GTX 1650 Ti 4GB, 8GB DDR4, 240GB SSD, 802.11AC WiFi, Bluetooth 5 & Win 10 Home 64 bit]]></string>
    <string name="precio_compu">Precio: $1199.99</string>
    <string name="especificaciones">Especificaciones:</string>
    <string name="especificaciones_txt">– Brand Name: Intel – Series: Xeon E3-1230 - Processor Count: 8 Cores / 16 Threads - Processor: 3.60 GHz up to 5.00 GH - cache: 16 MB Cache - Dimensions: 2.9 x 4.4 x 4.6 inches</string>
    <string name="agregar_txt_btn_product">Agregar</string>
    <string name="ver_en_amazon">Ver en amazon</string>
    <string name="especificaciones_mother">(Intel X299) LGA 2066, 12 IR3555 Power Stages, DDR4 4266 MHz, Triple M.2, USB 3.2 Gen 2 Type-C, Intel LAN and Aura Sync RGB Lighting</string>
    <string name="name_laptop">Razer Blade 15 Gaming Laptop</string>
    <string name="precio_laptop">Precio: $2859.00</string>
    <string name="especificaciones_comp">Intel Core i7–8750H 6 Core, NVIDIA GeForce RTX 2070 Max-Q | 15.6 FHD 144Hz | 16GB RAM | 512GB SSD, CNC Aluminum, Chroma RGB Lighting, Thunderbolt 3</string>
    <string name="especificacion_grafica">Graphics Card, 2X Windforce Fans, 8GB 256-Bit GDDR5, Gv-RX590GAMING-8GD Video Card</string>


    <string name="cerrar_sesion_txt_btn">Cerrar sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="total_744_89">Total: 744.89$</string>
    <string name="imagen">IMAGEN</string>
    <string name="subir">subir</string>
    <string name="precio_de_producto">Precio de producto</string>
    <string name="nombre_de_producto">Nombre de producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="computadora_gaming_1">COMPUTADORA GAMING 1</string>
    <string name="computadora_gaming_2">COMPUTADORA GAMING 2</string>
    <string name="precio_72_99">Precio: $72.99</string>
    <string name="calificacion">calificacion</string>
    <string name="selected_image">Selected image</string>
    <string name="product_id">Product id</string>
</resources>
