<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment_subirproducto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageSelected"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_wide"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginBottom="@dimen/small_margin"
                android:contentDescription="@string/selected_image"
                app:layout_constraintBottom_toTopOf="@+id/nameProductET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonPickImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigMargin_60dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="@dimen/TitulosSize"
                android:background="@drawable/boton_redondo"
                android:fontFamily="@font/montserrat"
                android:importantForAutofill="no"
                android:text="@string/imagen"
                android:textColor="@color/backgroundWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonUpload"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rankProduct_ET" />

            <Button
                android:id="@+id/buttonUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/bigMargin_60dp"
                android:layout_marginBottom="@dimen/TitulosSize"
                android:background="@drawable/boton_redondo"
                android:fontFamily="@font/montserrat"
                android:text="@string/subir"
                android:textColor="@color/backgroundWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonPickImg" />

            <EditText
                android:id="@+id/nameProductET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin_24dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/greenColor"
                android:ems="10"
                android:hint="@string/nombre_de_producto"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/DescProduct_ET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idProduct"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/idProduct"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/greenColor"
                android:ems="10"
                android:hint="@string/product_id"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/nameProductET"
                app:layout_constraintStart_toStartOf="@+id/imageSelected"
                app:layout_constraintTop_toTopOf="@+id/nameProductET"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/DescProduct_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_30dp"
                android:layout_marginBottom="@dimen/margin_wide"
                android:backgroundTint="@color/greenColor"
                android:ems="10"
                android:hint="@string/descripcion"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/priceProduct_ET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/priceProduct_ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigMargin_60dp"
                android:layout_marginEnd="@dimen/bigMargin_60dp"
                android:layout_marginBottom="@dimen/margin_wide"
                android:backgroundTint="@color/greenColor"
                android:ems="10"
                android:hint="@string/precio_de_producto"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/rankProduct_ET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/rankProduct_ET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigMargin_60dp"
                android:layout_marginEnd="@dimen/bigMargin_60dp"
                android:layout_marginBottom="@dimen/margin_30dp"
                android:backgroundTint="@color/greenColor"
                android:ems="10"
                android:hint="@string/calificacion"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="lollipop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>