<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".moreFragmentViews.SignupFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigMargin_60dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/bigMargin_60dp"
            android:backgroundTint="@color/greenColor"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/contrasena"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/conf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigMargin_60dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/bigMargin_60dp"
            android:backgroundTint="@color/greenColor"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirmar_contrasena"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigMargin_60dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/bigMargin_60dp"
            android:backgroundTint="@color/greenColor"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/correo_electronico"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigMargin_60dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/bigMargin_60dp"
            android:background="@drawable/boton_redondo"
            android:fontFamily="@font/montserrat"
            android:text="@string/crear_cuenta"
            android:textColor="@color/backgroundWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conf_password" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/bigMargin_60dp"
            android:background="@drawable/boton_imagen"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_facebook_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/button_create"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/bigMargin_60dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/boton_imagen"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_github_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_create"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="125dp"
            android:layout_height="112dp"
            android:layout_marginStart="@dimen/bigMargin_60dp"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/bigMargin_60dp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>